fix: error running tests

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "type-check": "pnpm -r type-check"
   },
   "devDependencies": {
+    "@my-org/nuxt-layer-hello-world": "workspace:*",
     "@nuxt/eslint": "latest",
     "@nuxt/test-utils": "^3.19.2",
     "@vue/test-utils": "^2.4.6",
